--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   },
   "dependencies": {
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.3.0",
     "gray-matter": "^4.0.2",
+    "locomotive-scroll": "^4.1.4",
     "next": "latest",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
+    "react-locomotive-scroll": "^0.2.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
   }
